RESOLVED FIXED56777
QT plug-in fails to load contextual menu
https://bugs.webkit.org/show_bug.cgi?id=56777
Summary QT plug-in fails to load contextual menu
Anders Carlsson
Reported 2011-03-21 16:04:06 PDT
QT plug-in fails to load contextual menu
Attachments
Patch (4.63 KB, patch)
2011-03-21 16:08 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-21 16:08:31 PDT
Sam Weinig
Comment 2 2011-03-21 16:09:29 PDT
Comment on attachment 86380 [details] Patch Ewww.
Anders Carlsson
Comment 3 2011-03-21 16:11:27 PDT
Note You need to log in before you can comment on or make changes to this bug.