Source/WebKit2/Shared/Plugins/Netscape/NetscapePluginModule.cpp
@@ -225,8 +225,21 @@ bool NetscapePluginModule::tryLoad()
     // reversed. Failing to follow this order results in crashes (e.g., in Silverlight on Mac and
     // in Flash and QuickTime on Windows).
 #if PLUGIN_ARCHITECTURE(MAC)
-    if (initializeFuncPtr(netscapeBrowserFuncs()) != NPERR_NO_ERROR || getEntryPointsFuncPtr(&m_pluginFuncs) != NPERR_NO_ERROR)
-        return false;
+#ifndef NP_NO_CARBON
+    // Plugins (at least QT) require that you call UseResFile on the resource file before loading it.
+    ResFileRefNum currentResourceFile = CurResFile();
+    
+    ResFileRefNum pluginResourceFile = m_module->bundleResourceMap();
+    UseResFile(pluginResourceFile);
+#endif
+    bool result = initializeFuncPtr(netscapeBrowserFuncs()) == NPERR_NO_ERROR && getEntryPointsFuncPtr(&m_pluginFuncs) == NPERR_NO_ERROR;
+
+#ifndef NP_NO_CARBON
+    // Restore the resource file.
+    UseResFile(currentResourceFile);
+#endif
+
+    return result;
 #elif PLUGIN_ARCHITECTURE(WIN)
     if (getEntryPointsFuncPtr(&m_pluginFuncs) != NPERR_NO_ERROR || initializeFuncPtr(netscapeBrowserFuncs()) != NPERR_NO_ERROR)
         return false;
